Fix the container collapsing issues

--- a/frontend/src/style/NavFreep.scss
+++ b/frontend/src/style/NavFreep.scss
@@ -5,6 +5,7 @@
   border-bottom: 2px solid goldenrod;
   box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.1);
   width: 101vw;
+  height: auto;
   z-index: 200;
   margin-bottom: 10rem;
 }
